@@ -1,3 +1,6 @@
+10/1/2002
+	- Memory usage and speed improvements to the TypeMap class.
+
 9/25/2002
 	- Add the verbosecache option.
 	- Significant memory usage improvements to the Name class.
